[tool.poetry]
name = "timed-count"
version = "1.0.0"
description = "`timed-count` provides a generator function that returns an iterator that delays each iteration by the specified time period. It can be used to execute code at a precise frequency."
authors = ["morefigs"]
homepage = "https://github.com/morefigs/timed-count"
readme = "README.md"
packages = [{include = "timed_count"}]

[tool.poetry.dependencies]
python = "^3.10"
stoppy = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
